@@ -22,6 +22,7 @@
 
 * https://github.com/serpro69/kotlin-faker/pull/161[#161] Fix empty lists as parameter values
 * https://github.com/serpro69/kotlin-faker/pull/171[#171] Fix locale fallback
+* https://github.com/serpro69/kotlin-faker/pull/173[#173] Fix phoneNumber generation for `en-US` locale
 
 [discrete]
 === Other
